# rgi

./: .gitignore  ARCHITECTURE.md  CI.md  Makefile  README.md  check.py  main.py  pyproject.toml  rgi  test.py  test_rgi.py
.github/workflows/: test.yml
src/rgi/: __init__.py  cli.py  fzf.py  shell_scripts.py  test_runner.py
src/rgi/fzfui/: __init__.py  app.py
src/rgi/scripts/: open-in-editor  rgi  rgi-preview  rgi-switch-mode  rgi-toggle-pinned
tests/: run-all.sh  run_parametrized_tests.sh  test-interactive  test_rgi.py  test_script_invocation.py  test_tmux_isolation.sh
tests/f-rg/: test-main.sh
tests/fixtures/: setup_fixtures.sh
tests/rgi/: test-main.sh
