[project]
name = "rgi"
version = "0.1.0"
description = "Interactive file search via ripgrep, fzf, bat, and delta"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []
authors = [
    { name = "Dan Davison", email = "dandavison7@gmail.com" }
]
keywords = ["ripgrep", "rg", "fzf", "search", "interactive", "bat", "delta", "grep"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: System :: Shells",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

[project.scripts]
rgi = "rgi.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]
dev = [
    "ty",
    "ruff",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["rgi"]

[tool.setuptools.package-data]
rgi = ["scripts/*"]

[tool.uv]
package = true

[tool.uv.scripts]
check = "python check.py"
format = "ruff format ."

[tool.ty]
python-version = "3.10"
strict = false
include = ["src/**/*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
